# rr-converter

./: .gitignore  Cargo.toml  makefile  readme.md  run_all_in.sh
.github/workflows/: rust.yml
docs/: answer_review1.md  todo.md
docs/module1/: review1.md
docs/module2/: run_build_test_mod2.mk
rr-file-processor/: Cargo.toml  release_notes.md  rr_converter_readme.md
rr-file-processor/src/: main.rs
rr-file-processor/tests/: integration.rs  rust.txt
rr-parser-lib/: Cargo.toml
rr-parser-lib/src/: lib.rs  parser.rs
rr-parser-lib/src/parser/: common.rs  errors.rs  render.rs  sup_camp053.rs  sup_extra_fin_csv.rs  sup_mt940.rs  tests.rs
sandbox_env/: Cargo.toml  books.xml
sandbox_env/src/: alt_mt_940_parser.rs  example.md  main copy.rs  main.rs  main_books_work_v1.rs  main_mt940_parser_example_v1.rs  main_xml_simple_perser_v2.rs  main_xml_simple_work.rs  xml_parser_prod.rs
streaming_quotes_project/: Cargo.toml  readme.md
streaming_quotes_project/examples/: demo.rs  demo_features.rs
streaming_quotes_project/src/: lib.rs  metrics.rs  receiver.rs  sender.rs
streaming_quotes_project/tests/: integration.rs
tests/test_files/: Camt.053_example_file_FI-CPE.xml  MT940_github_1.mt940  MT940_github_1.mt940_to_Mt940.txt  MT_940_aiophotoz.mt940_to_Camt053.txt  MT_940_oracle.mt940  MT_940_oracle.mt940_to_csv.txt  camt053_dk_example.xml  camt_053_danske_bank  camt_053_treasurease.xml  camt_053_treasurease.xsd  csv_to_csv.txt  example_of_report_bill_1_normalized_v1.csv  example_of_report_bill_1_one_shot.csv  hello.txt  rust.txt
(+5 files in other folders)
